kube/deploy/core/storage/rook-ceph/cluster/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biohazard-dashboard-tailscale
  namespace: rook-ceph
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: rook-ceph-mgr-dashboard
      port:
        name: http-dashboard
  tls:
    - hosts: [c]
